[backend/frontend] Hide deprecated payloads by default (#3882)